--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Titulo de la primera pagina</h1>
+    <h1>Titulo de prueba</h1>
+    <p>Probando mi página de prueba</p>
 </body>
 </html>
