--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Titulo de prueba</h1>
     <p>Probando mi página de prueba</p>
+    <script src="js/cifrado.js"></script>
 </body>
 </html>
