Agregando botones de cifrado y descifrado

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 <body>
     <h1>Titulo de prueba</h1>
     <p>Probando mi página de prueba</p>
-    <script src="js/cifrado.js"></script>
+    <textarea name="mensaje" id="mensaje" maxlength="150" placeholder="Escribe tu mensaje secreto"></textarea>
+    <input id="desplazamiento" type="number" placeholder="Escribe el desplazamiento">
+    <button id="cifrar" type="button">Cifrar</button>
+    <button id="descifrar" type="button">Descifrar</button>
+    <div id="resultado">
+
+    </div>
+    <script src="js/script.js" type="module"></script>
+    <script src="js/cifrado.js" type="module"></script>
 </body>
 </html>
