--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h1>Titulo de prueba</h1>
@@ -14,6 +15,11 @@
     <button id="descifrar" type="button">Descifrar</button>
     <div id="resultado">
 
+    </div>
+    <div id="myModal" class="modal">
+        <div class="modalContenido">
+            <span class="close">&times;</span>
+        </div>
     </div>
     <script src="js/script.js" type="module"></script>
     <script src="js/cifrado.js" type="module"></script>
