corrigiendo cierre modal

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <div id="myModal" class="modal">
         <div class="modalContenido">
             <span class="close">&times;</span>
+            <p class="mensajeContenido"></p>
         </div>
     </div>
     <script src="js/script.js" type="module"></script>
